# Real-Alpha-Trader

./: .gitignore  CACHE_ANALYSIS.md  CODE_REVIEW_FIXES_SUMMARY.md  COMPREHENSIVE_CODE_REVIEW.md  Dockerfile  LICENSE  NOTICE  QUERY_BALANCE_README.md  README.md  SYSTEM_AUDIT_REPORT.md  SYSTEM_CODE_AUDIT_REPORT.md  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  query_balance_direct.py  query_balance_positions.py  start_arena.ps1  start_arena.sh  test_binance.py  test_binance_balance.py  test_buy_btc.py  test_code_review_fixes.py  test_sell_btc.py
backend/: main.py  metadata.db-shm  models.py  pyproject.toml  verify_trades_display.py
backend/api/: account_management_routes.py  account_routes.py  arena_routes.py  config_routes.py  crypto_routes.py  market_data_routes.py  order_routes.py  prompt_routes.py  ranking_routes.py  system_log_routes.py  user_routes.py  ws.py
backend/config/: prompt_templates.py  settings.py
backend/database/: connection.py  models.py
backend/factors/: __init__.py  momentum.py  support.py
backend/repositories/: account_repo.py  kline_repo.py  order_repo.py  position_repo.py  prompt_repo.py  strategy_repo.py  user_repo.py
backend/schemas/: account.py  order.py  position.py  prompt.py  user.py
backend/scripts/: README.md  fix_position_avg_cost_to_current_price.py  test_pnl_calculation.py  update_position_avg_cost.py
backend/services/: ai_decision_service.py  asset_calculator.py  asset_curve_calculator.py  asset_snapshot_service.py  auto_trader.py  binance_sync.py  broker_adapter.py  broker_binance.py  (+20 more)
(+56 files in other folders)
